--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 URL="mongodb+srv://Raghul:raghul@raghul.9mka0.mongodb.net/estate"
 secret = "raghulddddd"
-pass = 'Raghul1234&'
+pass = 'tyqwrjovwqfnjqmw'
+AccessKeyId = 'AKIAYWUPNFDQJK652MN4'
+SecretAccessKey = '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'
