--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1161.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.7.3",
     "validator": "^13.7.0"
   }
