--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.7",
     "serve": "^13.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
